feat: add config handler to retrieve parsed dehydrated config
